# Multi-year-yield-map-generator

./: LICENSE  README.md  pyproject.toml
yieldprediction/: yieldprediction.py
