[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "crop-yield-prediction"
version = "0.1.0"

authors = [
    {name = "Marco Donat & Jonas Geistert", email = "marco.donat@zalf.de"},
]
description = "Creates random yield data with spatial and temporal autocorrelation"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "MIT"}
dependencies = [
    "geopandas >=0.12.2",
    "numpy >=1.24.2",
    "pyproj >= 3.0.1",
    "shapely >= 1.7.1", 
]

[tool.setuptools.packages.find]
include = ["yieldprediction*"]
namespaces = true
